# heartbeat_ncnn_opencv

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/nyiit/heartbeat/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: com_nyiit_heartbeat_detector_FaceDetector.cpp  com_nyiit_heartbeat_detector_FaceDetector.h
app/src/main/java/com/nyiit/heartbeat/: CameraActivity.java  CameraPreviewActivity.java
app/src/main/java/com/nyiit/heartbeat/detector/: FaceDetector.java
app/src/main/java/com/nyiit/heartbeat/utils/: FileUtil.java
app/src/main/res/layout/: activity_camerapreview.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/nyiit/heartbeat/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
opencv/sdk/etc/haarcascades/: haarcascade_eye.xml  haarcascade_eye_tree_eyeglasses.xml  haarcascade_frontalcatface.xml  haarcascade_frontalcatface_extended.xml  haarcascade_frontalface_alt.xml  haarcascade_frontalface_alt2.xml  haarcascade_frontalface_default.xml  haarcascade_fullbody.xml  haarcascade_lefteye_2splits.xml  haarcascade_lowerbody.xml  haarcascade_profileface.xml  haarcascade_righteye_2splits.xml  haarcascade_smile.xml  haarcascade_upperbody.xml
opencv/sdk/etc/lbpcascades/: lbpcascade_frontalcatface.xml  lbpcascade_profileface.xml  lbpcascade_silverware.xml
opencv/sdk/java/javadoc/: index-all.html
opencv/sdk/java/javadoc/org/opencv/features2d/: AKAZE.html  BRISK.html  KAZE.html  MSER.html  ORB.html  package-summary.html
(+13 files in other folders)
